--- a/index.html
+++ b/index.html
@@ -498,7 +498,19 @@
                     ម៉ោង ១៨:០០ ល្ងាច<br>
                 </p>
                 <p class="location-name">Siem Reap</p>
-                <a href="wedding-event.ics" class="calendar-btn" id="calendarBtn">📅 Add to Calendar</a>
+              <a
+                    class="calendar-btn"
+                    target="_blank"
+                    href="https://www.google.com/calendar/render?action=TEMPLATE
+                    &text=ពិធីអាពាហ៍ពិពាហ៍
+                    &dates=20260130T110000Z/20260131T150000Z
+                    &location=Siem+Reap
+                    &details=សូមអញ្ជើញចូលរួមពិធីអាពាហ៍ពិពាហ៍">
+                    📅 Add to Google Calendar
+                    </a>
+
+
+
             </div>
         </section>
 
